# rs-evasm

./: .gitignore  .travis.yml  Cargo.toml  README.md
data/: prog.evasm
src/: generate.rs  lib.rs  main.rs  parse.rs
