[package]
name = "evasm"
version = "0.2.1"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
peg = "0.6.0"
wbuf = "0.1.1"

[[bin]]
name = "evasm"
path = "bin/main.rs"
